<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_app"
        android:enabled="true"
        android:icon="@drawable/ic_report"
        android:title="@string/bottom_navigation_view_button1_child"/>

    <item
        android:id="@+id/page_test"
        android:enabled="true"
        android:icon="@drawable/ic_test"
        android:title="@string/bottom_navigation_view_button2_child"/>

    <item
        android:id="@+id/page_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/bottom_navigation_view_button3"/>

    <item
        android:id="@+id/page_setting"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/bottom_navigation_view_button4"/>
</menu>